--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -82,11 +82,11 @@
     "how_help": "Comment cet outil m’accompagne dans ma compréhension ?",
     "sources_title": "En s'appuyant sur des sources fiables",
     "sources_subtitle": "Notre IA utilise uniquement des documents publics et fiables pour formuler ses réponses.",
-    "sources_text": "Toutes les sources utilisées par notre Intelligence Artificielle sont soigneusement sélectionnées, vérifiées et modérées par Make.org. Priorisant les contenus vidéo, notre IA offre également la possibilité de rechercher spécifiquement parmi les documents retranscrits à l'issue des échanges. Les réponses que vous obtenez lors de votre expérience sur notre plateforme proviennent de documents publics. Ces réponses sont générées grâce à la technologie AI (basée sur un RAG - Retrieval-Augmented Generation) dont l'explication se trouve en bas de page.",
-    "videos_title": "Vidéos",
-    "videos_text": "Nos réponses initiales sont sourcées à partir d’une base de vidéos.",
-    "docs_title": "Documents",
-    "docs_text": "Pour aller plus loin, nous vous proposons d'accéder à une réponse approfondie qui utilise des sources complémentaires.",
+    "sources_text": "Toutes les sources utilisées par notre Intelligence Artificielle sont soigneusement sélectionnées, vérifiées et modérées par Make.org. Les réponses que vous obtenez lors de votre expérience sur notre plateforme proviennent de documents publics. Ces réponses sont générées grâce à la technologie AI (basée sur un RAG - Retrieval-Augmented Generation) dont l'explication se trouve en bas de page.",
+    "sources_origin_title": "Nos sources",
+    "sources_origin_text_header": "Notre IA se source dans une base multi-documentaire afin de produire ses réponses.",
+    "sources_origin_text_bullet_1": "Une base de vidéos officiels sont retranscrits et vérifiés afin de vous économiser du temps de visionnage sans perdre d’informations. ",
+    "sources_origin_text_bullet_2": "Des documents certifiés sont égalements utilisés comme source par notre IA, qui les simplifie pour faciliter la compréhension de tous.",
     "warning_docs": "Pour l’instant, notre IA se sert indépendamment des sources vidéos et textuelles. La première réponse provient des sources vidéos. Dans cette réponse, vous verrez ce bouton : ",
     "warning_docs_2": "En cliquant, vous accéderez à la réponse qui est uniquement sourcée dans les documents écrits.",
     "exchange_title": "En prenant la forme d’un échange",
