feat(global): added gtc link in submit form
closes: MP-3874

--- a/apps/front/i18n/bg.json
+++ b/apps/front/i18n/bg.json
@@ -412,7 +412,9 @@
       "button_submit": "Потвърждаване",
       "read_our": "Прочетете нашата",
       "moderation_link": "Политика за модериране",
-      "button_propose": "ПРЕДЛОЖЕТЕ"
+      "button_propose": "ПРЕДЛОЖЕТЕ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Промяна на моето предложение",
