--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -422,7 +422,9 @@
       "button_submit": "Bestätigen",
       "read_our": "Lesen Sie unsere",
       "moderation_link": "Moderationscharta",
-      "button_propose": "Bestätigen"
+      "button_propose": "Bestätigen",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Meinen Vorschlag ändern",
