--- a/apps/front/i18n/el.json
+++ b/apps/front/i18n/el.json
@@ -431,7 +431,9 @@
       "button_submit": "Επικύρωση",
       "read_our": "Διαβάστε την",
       "moderation_link": "πολιτική ελέγχου περιεχομένου",
-      "button_propose": "ΥΠΟΒΟΛΗ ΠΡΟΤΑΣΗΣ"
+      "button_propose": "ΥΠΟΒΟΛΗ ΠΡΟΤΑΣΗΣ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Τροποποίηση της πρότασής μου",
