--- a/apps/front/i18n/es.json
+++ b/apps/front/i18n/es.json
@@ -417,7 +417,9 @@
       "button_submit": "Validar",
       "read_our": "Leer nuestra",
       "moderation_link": "Política de moderación",
-      "button_propose": "HACER UNA PROPUESTA"
+      "button_propose": "HACER UNA PROPUESTA",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Modificar mi propuesta",
