--- a/apps/front/i18n/et.json
+++ b/apps/front/i18n/et.json
@@ -431,7 +431,9 @@
       "button_submit": "Kinnita",
       "read_our": "Loe meie",
       "moderation_link": "modereerimise eeskirju",
-      "button_propose": "ETTEPANEK"
+      "button_propose": "ETTEPANEK",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Muuda minu ettepanekut",
