--- a/apps/front/i18n/fi.json
+++ b/apps/front/i18n/fi.json
@@ -412,7 +412,9 @@
       "button_submit": "Vahvista",
       "read_our": "Lue",
       "moderation_link": "moderointisääntömme",
-      "button_propose": "EHDOTA"
+      "button_propose": "EHDOTA",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Muokkaa ehdotustani",
