--- a/apps/front/i18n/hu.json
+++ b/apps/front/i18n/hu.json
@@ -431,7 +431,9 @@
       "button_submit": "Érvényesítés",
       "read_our": "Olvassa el",
       "moderation_link": "moderációs szabályzatunkat",
-      "button_propose": "JAVASLAT"
+      "button_propose": "JAVASLAT",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Javaslatom módosítása",
