--- a/apps/front/i18n/lt.json
+++ b/apps/front/i18n/lt.json
@@ -436,7 +436,9 @@
       "button_submit": "Patvirtinti",
       "read_our": "Skaitykite mūsų",
       "moderation_link": "moderavimo taisykles",
-      "button_propose": "PASIŪLYTI"
+      "button_propose": "PASIŪLYTI",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Redaguoti pasiūlymą",
