--- a/apps/front/i18n/ro.json
+++ b/apps/front/i18n/ro.json
@@ -417,7 +417,9 @@
       "button_submit": "Validare",
       "read_our": "Citiți",
       "moderation_link": "carta noastră de moderare",
-      "button_propose": "PROPUNERI"
+      "button_propose": "PROPUNERI",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Modificarea propunerii mele",
