--- a/apps/widget/i18n/it.json
+++ b/apps/widget/i18n/it.json
@@ -207,7 +207,9 @@
       "panel_trigger": "Propongono una soluzione",
       "read_our": "Leggi la nostra",
       "moderation_link": "carta di moderazione",
-      "button_propose": "PROPONI"
+      "button_propose": "PROPONI",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Indietro",
