--- a/apps/widget/i18n/pl.json
+++ b/apps/widget/i18n/pl.json
@@ -207,7 +207,9 @@
       "panel_trigger": "Proponuję rozwiązanie",
       "read_our": "Przeczytaj naszą",
       "moderation_link": "kartę moderacji",
-      "button_propose": "ZAPROPONUJ"
+      "button_propose": "ZAPROPONUJ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Powrót",
