--- a/apps/widget/i18n/pt.json
+++ b/apps/widget/i18n/pt.json
@@ -224,7 +224,9 @@
       "panel_trigger": "Proponho uma solução",
       "read_our": "Ler a nossa",
       "moderation_link": "carta de moderação",
-      "button_propose": "PROPOR"
+      "button_propose": "PROPOR",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Voltar",
