--- a/apps/widget/i18n/sl.json
+++ b/apps/widget/i18n/sl.json
@@ -228,7 +228,9 @@
       "panel_trigger": "Želim predlagati rešitev",
       "read_our": "Preberi naš",
       "moderation_link": "pravilnik o moderiranju",
-      "button_propose": "PREDLAGAJ"
+      "button_propose": "PREDLAGAJ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Nazaj",
