--- a/apps/widget/i18n/uk.json
+++ b/apps/widget/i18n/uk.json
@@ -226,7 +226,9 @@
       "panel_trigger": "Запропонувати рішення",
       "read_our": "Ознайомитися",
       "moderation_link": "з кодексом модерації",
-      "button_propose": "ПРОПОНУВАТИ"
+      "button_propose": "ПРОПОНУВАТИ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Назад",
