--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -384,7 +384,9 @@
       "button_submit": "Validate",
       "read_our": "Read our",
       "moderation_link": "moderation charter",
-      "button_propose": "Submit"
+      "button_propose": "Submit",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "To modify my proposal",
