--- a/apps/front/i18n/lv.json
+++ b/apps/front/i18n/lv.json
@@ -436,7 +436,9 @@
       "button_submit": "Apstiprināt",
       "read_our": "Iepazīstieties ar mūsu",
       "moderation_link": "moderēšanas hartu",
-      "button_propose": "IEROSINĀT"
+      "button_propose": "IEROSINĀT",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Grozīt manu priekšlikumu",
