--- a/apps/front/i18n/pl.json
+++ b/apps/front/i18n/pl.json
@@ -417,7 +417,9 @@
       "button_submit": "Zatwierdź",
       "read_our": "Przeczytaj naszą",
       "moderation_link": "kartę moderacji",
-      "button_propose": "ZAPROPONUJ"
+      "button_propose": "ZAPROPONUJ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Zmień moją propozycję",
