--- a/apps/front/i18n/sk.json
+++ b/apps/front/i18n/sk.json
@@ -436,7 +436,9 @@
       "button_submit": "Potvrdiť",
       "read_our": "Prečítať si naše",
       "moderation_link": "Chartu moderovania",
-      "button_propose": "NAVRHNÚŤ"
+      "button_propose": "NAVRHNÚŤ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Upraviť môj návrh",
