--- a/apps/front/i18n/sv.json
+++ b/apps/front/i18n/sv.json
@@ -431,7 +431,9 @@
       "button_submit": "Godkänn",
       "read_our": "Läs vår",
       "moderation_link": "modereringspolicy",
-      "button_propose": "LÄGG ETT FÖRSLAG"
+      "button_propose": "LÄGG ETT FÖRSLAG",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "button_back": "Ändra mitt förslag",
