--- a/apps/widget/i18n/bg.json
+++ b/apps/widget/i18n/bg.json
@@ -205,7 +205,9 @@
       "panel_trigger": "Предлагам решение",
       "read_our": "Прочетете нашата",
       "moderation_link": "Политика за модериране",
-      "button_propose": "ПРЕДЛОЖЕТЕ"
+      "button_propose": "ПРЕДЛОЖЕТЕ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Обратно",
