--- a/apps/widget/i18n/cs.json
+++ b/apps/widget/i18n/cs.json
@@ -226,7 +226,9 @@
       "panel_trigger": "Navrhuji řešení",
       "read_our": "Přečíst si naši",
       "moderation_link": "Chartu moderování",
-      "button_propose": "PODAT NÁVRH"
+      "button_propose": "PODAT NÁVRH",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Návrat",
