--- a/apps/widget/i18n/da.json
+++ b/apps/widget/i18n/da.json
@@ -224,7 +224,9 @@
       "panel_trigger": "Jeg foreslår en løsning",
       "read_our": "Læs vores",
       "moderation_link": "Moderationspolitik",
-      "button_propose": "FORESLÅ"
+      "button_propose": "FORESLÅ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Tilbage",
