--- a/apps/widget/i18n/el.json
+++ b/apps/widget/i18n/el.json
@@ -224,7 +224,9 @@
       "panel_trigger": "Προτείνω μια λύση",
       "read_our": "Διαβάστε την",
       "moderation_link": "πολιτική ελέγχου περιεχομένου",
-      "button_propose": "ΥΠΟΒΟΛΗ ΠΡΟΤΑΣΗΣ"
+      "button_propose": "ΥΠΟΒΟΛΗ ΠΡΟΤΑΣΗΣ",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Επιστροφή",
