--- a/apps/widget/i18n/es.json
+++ b/apps/widget/i18n/es.json
@@ -207,7 +207,9 @@
       "panel_trigger": "Quiero proponer una solución",
       "read_our": "Leer nuestra",
       "moderation_link": "Política de moderación",
-      "button_propose": "HACER UNA PROPUESTA"
+      "button_propose": "HACER UNA PROPUESTA",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Volver",
