--- a/apps/widget/i18n/et.json
+++ b/apps/widget/i18n/et.json
@@ -224,7 +224,9 @@
       "panel_trigger": "Pakun lahendust",
       "read_our": "Loe meie",
       "moderation_link": "modereerimise eeskirju",
-      "button_propose": "ETTEPANEK"
+      "button_propose": "ETTEPANEK",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Tagasi",
