--- a/apps/widget/i18n/hr.json
+++ b/apps/widget/i18n/hr.json
@@ -226,7 +226,9 @@
       "panel_trigger": "Predlažem rješenje",
       "read_our": "Pročitajte naš",
       "moderation_link": "pravilnik za moderiranje",
-      "button_propose": "POŠALJI PRIJEDLOG"
+      "button_propose": "POŠALJI PRIJEDLOG",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Natrag",
