--- a/apps/widget/i18n/lt.json
+++ b/apps/widget/i18n/lt.json
@@ -224,7 +224,9 @@
       "panel_trigger": "SIŪLYTI sprendimą",
       "read_our": "Skaitykite mūsų",
       "moderation_link": "moderavimo taisykles",
-      "button_propose": "PASIŪLYTI"
+      "button_propose": "PASIŪLYTI",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Atgal",
