--- a/apps/widget/i18n/lv.json
+++ b/apps/widget/i18n/lv.json
@@ -224,7 +224,9 @@
       "panel_trigger": "Es piedāvāju risinājumu",
       "read_our": "Iepazīstieties ar mūsu",
       "moderation_link": "moderēšanas hartu",
-      "button_propose": "IEROSINĀT"
+      "button_propose": "IEROSINĀT",
+      "and": "@@proposal_submit.form.and|fr:et nos",
+      "gtc": "@@proposal_submit.form.gtc|fr:conditions d'utilisation"
     },
     "authentication": {
       "back": "Atpakaļ",
