feat(assembly-ui): update title and small fixes
closes: MP-3891

--- a/apps/assembly-ui/i18n/de.json
+++ b/apps/assembly-ui/i18n/de.json
@@ -133,5 +133,8 @@
     "docs": "Dokumentarische Quellen :",
     "see": "Veranstaltung ansehen",
     "videos": "Videoquellen :"
+  },
+  "welcome": {
+    "title": "@@welcome.title|fr:Demander, Comprendre"
   }
 }
