--- a/apps/assembly-ui/i18n/es.json
+++ b/apps/assembly-ui/i18n/es.json
@@ -133,5 +133,8 @@
     "docs": "Fuentes documentales :",
     "see": "Ver el evento",
     "videos": "Fuentes de vídeo :"
+  },
+  "welcome": {
+    "title": "@@welcome.title|fr:Demander, Comprendre"
   }
 }
