--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -10,7 +10,8 @@
     "top": "Aller en haut de la page"
   },
   "welcome": {
-    "title": "Demander, Comprendre"
+    "title": "Demander, Comprendre",
+    "exergue": "Cet outil est une plateforme qui utilise l’Intelligence Artificielle pour rendre accessible la compréhension des sujets complexes pour les citoyens."
   },
   "modal": {
     "closeLabel": "Fermer la fenêtre de dialogue",
