--- a/apps/assembly-ui/i18n/en.json
+++ b/apps/assembly-ui/i18n/en.json
@@ -136,6 +136,8 @@
   },
   "welcome": {
     "title": "@@welcome.title|fr:Demander, Comprendre",
-    "exergue": "@@welcome.exergue|fr:Cet outil est une plateforme qui utilise l’Intelligence Artificielle pour rendre accessible la compréhension des sujets complexes pour les citoyens."
+    "exergue": "@@welcome.exergue|fr:Cet outil est une plateforme qui utilise l’Intelligence Artificielle pour rendre accessible la compréhension des sujets complexes pour les citoyens.",
+    "more": "@@welcome.more|fr:Voir plus...",
+    "less": "@@welcome.less|fr:Réduire..."
   }
 }
