--- a/apps/assembly-ui/i18n/en.json
+++ b/apps/assembly-ui/i18n/en.json
@@ -11,15 +11,7 @@
   },
   "modal": {
     "closeLabel": "Close the dialogue window",
-    "discover": "Discover the tool",
-    "suggestion": "Answer to all your questions with Artificial Intelligence (AI)",
-    "suggestionText": "Instant answers to your questions.",
-    "explore": "Explore specific topics & themes",
-    "exploreText": "Delve into specific subjects that pique your interest.",
-    "sources": "Explore verified sources",
-    "sourcesText": "Discover the verified sources our AI uses to generate each answer.",
-    "openLabel": "Open the dialogue window",
-    "proposal": "What were participants’ proposals?"
+    "openLabel": "Open the dialogue window"
   },
   "prompt": {
     "submit": "Send",
