feat(front): update result page fdd action
closes: MP-3922

--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -806,6 +806,11 @@
       "title": "What can we take away from the consultation?",
       "participation": {
         "title": "Consultation’s participants"
+      },
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
       }
     },
     "reset": "Reinitialize",
