--- a/apps/front/i18n/hr.json
+++ b/apps/front/i18n/hr.json
@@ -1019,7 +1019,12 @@
         "percentage": "postotak"
       },
       "breadcrumb": "Rezultati za stavku \"{{title}}\"",
-      "title": "Što zapamtiti iz ovog rasprave?"
+      "title": "Što zapamtiti iz ovog rasprave?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Ponovno pokreni",
     "sortby": "Razvrstaj prema: ",
