--- a/apps/front/i18n/hu.json
+++ b/apps/front/i18n/hu.json
@@ -1006,7 +1006,12 @@
         "percentage": "százalékarány"
       },
       "breadcrumb": "A \"{{title}}\" eredményei",
-      "title": "Mit tudunk meg ebből a konzultációból?"
+      "title": "Mit tudunk meg ebből a konzultációból?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Visszaállítás",
     "sortby": "Rendezés a következők alapján: ",
