--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -1019,7 +1019,12 @@
         "percentage": "procenta"
       },
       "breadcrumb": "Výsledky „{{title}}“",
-      "title": "Co si z této konzultace vzít?"
+      "title": "Co si z této konzultace vzít?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Obnovit",
     "sortby": "Seřadit podle: ",
