--- a/apps/front/i18n/da.json
+++ b/apps/front/i18n/da.json
@@ -1006,7 +1006,12 @@
         "percentage": "procent"
       },
       "breadcrumb": "Resultater af \"{{title}}\"",
-      "title": "Hvad har vi lært af denne høring?"
+      "title": "Hvad har vi lært af denne høring?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Nulstil",
     "sortby": "Sorter efter: ",
