--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -997,7 +997,12 @@
         "percentage": "Prozent"
       },
       "breadcrumb": "Ergebnisse für „{{title}}“",
-      "title": "Was können wir aus dieser Konsultation lernen?"
+      "title": "Was können wir aus dieser Konsultation lernen?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Zurücksetzen",
     "sortby": "Sortieren nach: ",
