--- a/apps/front/i18n/el.json
+++ b/apps/front/i18n/el.json
@@ -1006,7 +1006,12 @@
         "percentage": "ποσοστό"
       },
       "breadcrumb": "Αποτελέσματα για τη διαβούλευση «{{title}}»",
-      "title": "Τι προκύπτει από αυτή τη διαβούλευση;"
+      "title": "Τι προκύπτει από αυτή τη διαβούλευση;",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Επαναφορά",
     "sortby": "Ταξινόμηση κατά: ",
