--- a/apps/front/i18n/es.json
+++ b/apps/front/i18n/es.json
@@ -1000,7 +1000,12 @@
         "percentage": "porcentaje"
       },
       "breadcrumb": "Resultados para \"{{title}}\"",
-      "title": "¿Qué se puede extraer de esta consulta?"
+      "title": "¿Qué se puede extraer de esta consulta?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Restablecer",
     "sortby": "Ordenar por: ",
