--- a/apps/front/i18n/fi.json
+++ b/apps/front/i18n/fi.json
@@ -987,7 +987,12 @@
         "percentage": "prosenttimäärä"
       },
       "breadcrumb": "Kuulemisen \"{{title}}\" tulokset",
-      "title": "Kuulemisen tärkeimmät tulokset"
+      "title": "Kuulemisen tärkeimmät tulokset",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Nollaa",
     "sortby": "Lajitteluperuste: ",
