--- a/apps/front/i18n/it.json
+++ b/apps/front/i18n/it.json
@@ -1000,7 +1000,12 @@
         "percentage": "percentuale"
       },
       "breadcrumb": "Risultati di \"{{title}}\"",
-      "title": "Che cosa desumere da questa consultazione?"
+      "title": "Che cosa desumere da questa consultazione?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Azzera",
     "sortby": "Ordina per: ",
