--- a/apps/front/i18n/lv.json
+++ b/apps/front/i18n/lv.json
@@ -1019,7 +1019,12 @@
         "percentage": "procentuālā attiecība"
       },
       "breadcrumb": "Apspriešanas \"{{title}}” rezultāti",
-      "title": "Ko mēs varam mācīties no šīs apspriešanas?"
+      "title": "Ko mēs varam mācīties no šīs apspriešanas?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Atiestatīt",
     "sortby": "Šķirot pēc: ",
