--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1019,7 +1019,12 @@
         "percentage": "проценти"
       },
       "breadcrumb": "Результати «{{title}}»",
-      "title": "Що винести із цієї публічної консультації?"
+      "title": "Що винести із цієї публічної консультації?",
+      "actionFDD": {
+        "title": "@@consultation.results.actionFDD.title|fr:Les actions",
+        "text": "@@consultation.results.actionFDD.text|fr:Suite à la consultation et aux ateliers citoyens, des actions concrètes ont émergées pour que votre participation est un vrai impact sur la vie des citoyens. Découvrez les sur le site de Make.org Foundation.",
+        "discover": "@@consultation.results.actionFDD.discover|fr:Découvrir"
+      }
     },
     "reset": "Скинути",
     "sortby": "Сортувати за: ",
